--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 								<li><a href="elements.html">Elements</a></li>
 							</ul> </li>-->
 						
-						<li><a href="team/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
+						<li><a href="team2/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
 						<li><a id = "lil45" href="beta.html"style="font-family: UEFA Supercup;font-size: 18px;">Our Vision</a></li>
 							<!--
 							<ul>
