--- a/team2/index.html
+++ b/team2/index.html
@@ -39,7 +39,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/ni3.jpg" style="width: 100%;height: 100%;">
+                <img src="img/ni3.jpg" >
                 <figcaption>
                   <p>A B.Tech. student, 4th year, NIFFT Ranchi. Always fancied entrepreneurship. Loves doing poetry. Keeps things in place at utfive. Founder and ex-CEO of LoWallet.in (inactive now).</p>
                   <ul>
@@ -57,7 +57,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/ranjan.png" style="width: 100%;height: 100%;">
+                <img src="img/ranjan.png" >
                 <figcaption>
                   <p>A B.Tech. student, 4th year, IIT (ISM) Dhanbad. Loves numbers. Looks after finance and expert-onboarding. Co-founder and ex-CFO of LoWallet.in, an old fintech startup (inactive now).</p>
                   <ul>
@@ -75,7 +75,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/dwitun4.jpg" style="width: 100%;height: 100%;">
+                <img src="img/dwitun4.jpg" >
                 <figcaption>
                   <p>A B.Tech. student, 4th year, IIT (ISM) Dhanbad. Loves football. Looks after marketing and buzz-creation around utfive. Ex-COO at LoWallet.in (inactive now)</p>
                   <ul>
@@ -99,7 +99,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/sonali2.jpg" style="width: 100%;height: 100%;">
+                <img src="img/sonali2.jpg" >
                 <figcaption>
                   <p>An economics undergraduate. Tutor at Unacademy. Loves creating and curating content</p>
                   <ul>
@@ -117,7 +117,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/goutham.jpg" style="width: 100%;height: 100%;">
+                <img src="img/goutham.jpg" >
                 <figcaption>
                   <p>A B.Tech. 3rd-year Computer Science Student at PDPM IIITDM Jabalpur, Madhya Pradesh. He leads the technical team. Believes more in unconventional ideas. Founder and ex-CEO of Travel India</p>
                   <ul>
@@ -137,7 +137,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/me.jpg" style="width: 100%;height: 100%;">
+                <img src="img/me.jpg" >
                 <figcaption>
                   <p>A BE student ,3rd year ,Vidyalankar Institute of Technology(Mumbai).Loves learning new things, and expertising the field. Web master - head at CESA-VIT</p>
                   <ul>
@@ -160,7 +160,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/pr2.jpg" style="width: 100%;height: 100%;">
+                <img src="img/pr2.jpg" >
                 <figcaption>
                   <p>A computer science and engineering pursuing student with a passion for Machine learning and IoT. He has co-founded two start-ups in the past. He's a consistent learner and a firm believer in making the life of people simpler by adopting technology in a seamless manner.</p>
                   <ul>
@@ -178,7 +178,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/jyoti2.jpg" style="width: 100%;height: 100%;">
+                <img src="img/jyoti2.jpg" >
                 <figcaption>
                   <p>A B.Tech. 2nd Yr student at NIFFT Ranchi. A Technofreak. Loves designing and graphics work.</p>
                   <ul>
@@ -196,7 +196,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/shubham.jpg" style="width: 100%;height: 100%;">
+                <img src="img/shubham.jpg" >
                 <figcaption>
                   <p>A B.Tech. 2nd Yr student at NIFFT Ranchi. Loves finding solutions to solve real-life problems</p>
                   <ul>
