--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <script>
     AOS.init({duration: 1200});
   </script>
-	<div id = "keemo"> 
+	
 	<header id="headero" style="background-color: white;color: black;" >
 		<div class="container main-menu" style="background-color: white;">
 			<div class="row align-items-center justify-content-between d-flex">
@@ -197,7 +197,7 @@
 								<li><a href="elements.html">Elements</a></li>
 							</ul> </li>-->
 						
-						<li><a href="team2/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
+						<li><a href="team/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
 						<li><a id = "lil45" href="beta.html"style="font-family: UEFA Supercup;font-size: 18px;">Our Vision</a></li>
 							<!--
 							<ul>
