--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     AOS.init({duration: 1200});
   </script>
 	
-	<header id="header" style="background-color: white;color: black;" >
+	<header id="headero" style="background-color: white;color: black;" >
 		<div class="container main-menu" style="background-color: white;">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div data-aos="fade-up">
