--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<title>Utfive</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
-	<!--
+
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>-->
+	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!--
 			CSS
@@ -170,19 +170,19 @@
 </head>
 
 <body id="home">
-	<!-- start header Area 
+	<!-- start header Area -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({duration: 1200});
-  </script>-->
+  </script>
 	
 	<header id="headero" style="background-color: white;color: black;" >
 		<div class="container main-menu" style="background-color: white;">
 			<div class="row align-items-center justify-content-between d-flex">
-				<div data-aos="fade-up">
+				
 				<div id="logo" >
 					<a href="index.html" style="text-decoration: none;font-family: UEFA Supercup;font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
-				</div></div>
+				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li id="nav_home">
