--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 	<title>Utfive</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
-
+	<!--
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 	<!--
 			CSS
 			============================================= -->
@@ -170,17 +171,17 @@
 </head>
 
 <body id="home">
-	<!-- start header Area -->
+	<!-- start header Area 
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({duration: 1200});
-  </script>
+  </script>-->
 	
 	<header id="headero" style="background-color: white;color: black;" >
 		<div class="container main-menu" style="background-color: white;">
 			<div class="row align-items-center justify-content-between d-flex">
 				
-				<div id="logo" >
+				<div id="logo" class="animated bounce" >
 					<a href="index.html" style="text-decoration: none;font-family: UEFA Supercup;font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
 				</div>
 				<nav id="nav-menu-container">
@@ -221,7 +222,7 @@
 		<div class="container" data-aos="fade-up">
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
-					<h2 style="display:block;margin:0.4em auto;font-family: UEFA Supercup;text-align: center;font-weight: bold;" data-aos="flip-down">
+					<h2 style="display:block;margin:0.4em auto;font-family: UEFA Supercup;text-align: center;font-weight: bold;" data-aos="flip-down" class = "animated zoomInLeft">
 						utfive-<br> India's Most Credible News App
 					</h2>
 					<p style="text-align: center;font-family: UEFA Supercup;font-size: 18px;" data-aos="flip-left">Helps you to have a clear and well-informed opinion about topics that you care for</p>
