--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
 	<link rel="stylesheet" href="/animations.css" type="text/css">
-	
+	<!--
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">-->
 	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -173,11 +173,11 @@
 </head>
 
 <body id="home">
-	<!-- start header Area -->
+	<!-- start header Area 
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({duration: 1200});
-  </script>
+  </script>-->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/css3-animate-it.js"></script>
 	
@@ -856,7 +856,7 @@ Also, through our news platform, you get credible first-hand news reported by jo
 					</div>
 				</div>
 				<button class="foo2"  style="background-color: transparent;color: yellow;border:1px solid yellow;padding: 1px;border-radius: 10px;display:block;margin:0.4em auto;width: 55%;height: 50%;background-color: transparent;align-self: center;;margin:0.4em auto"><span><img src="img/ps.png" style="width: 20%;height: 20%;"></span>Download Utfive app</button>-->
-				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><span>DOWNLOAD UTFIVE APP </span></button>
+				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 20%;height: 20%;"><span>DOWNLOAD UTFIVE APP </span></button>
 			</div><br>
 
 			<div class="footer-bottom row align-items-center">
