--- a/beta.html
+++ b/beta.html
@@ -176,7 +176,7 @@
 								<li><a href="elements.html">Elements</a></li>
 							</ul> </li>-->
 						
-						<li><a href="team/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
+						<li><a href="team2/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
 						</a></li>
 							<!--
 							<ul>
