--- a/team2/index.html
+++ b/team2/index.html
@@ -32,8 +32,8 @@
   	<a href="index.html" style="text-decoration: none;font-family: UEFA Supercup;font-weight: bold;color: black;font-size: 23px;">
   		<img src="img/logo.png" alt="" title=""  />utfive</a>
   		<ul>
-  			<li onclick="window.open('../index.html')">Home</li>
-  			<li onclick="window.open('../beta.html')">Vision</li>
+  			<li><a href = "../index.html">Home</a></li>
+  			<li><a href = "../beta.html">Vision</a></li>
   		</ul>
   </div><br><br>
 
