--- a/index_team.html
+++ b/index_team.html
@@ -86,7 +86,7 @@
 </style>
 
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="team3/css/style.css">
   
   <link rel="stylesheet" href="css/linearicons.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
