--- a/index_team.html
+++ b/index_team.html
@@ -343,7 +343,7 @@
               <figure>
                 <img src="img/pr2.jpg" >
                 <figcaption>
-                  <p>A computer science and engineering pursuing student with a passion for Machine learning and IoT. He has co-founded two start-ups in the past. He's a consistent learner and a firm believer in making the life of people simpler by adopting technology in a seamless manner.</p>
+                  <p>A computer science and engineering pursuing student with a passion for Machine learning and IoT. He has co-founded two start-ups in the past.</p>
                   <ul>
                     <li><a href="https://www.facebook.com/probs2199"><i class="fa fa-facebook fa-2x"></i></a></li>
                    
