--- a/beta.html
+++ b/beta.html
@@ -176,7 +176,7 @@
 								<li><a href="elements.html">Elements</a></li>
 							</ul> </li>-->
 						
-						<li><a href="team2/index.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
+						<li><a href="index_team.html" style="font-family: UEFA Supercup;font-size: 18px;">Team</a></li>
 						</a></li>
 							<!--
 							<ul>
@@ -274,7 +274,7 @@
 					</div>
 				</div>
 				<button class="foo2"  style="background-color: transparent;color: yellow;border:1px solid yellow;padding: 1px;border-radius: 10px;display:block;margin:0.4em auto;width: 55%;height: 50%;background-color: transparent;align-self: center;;margin:0.4em auto"><span><img src="img/ps.png" style="width: 20%;height: 20%;"></span>Download Utfive app</button>-->
-				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 15%;height: 15%;"><span style="font-size: 13px;">DOWNLOAD UTFIVE APP </span></button>
+				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 15%;height: 15%;"><span style="font-size: 11px;">DOWNLOAD UTFIVE APP </span></button>
 			</div><br>
 
 			<div class="footer-bottom row align-items-center">
