--- a/beta.html
+++ b/beta.html
@@ -202,44 +202,24 @@
 	<section class="screenshot-area section-gap-top">
 		<div class="container" id="features" data-aos = "slide-up">
 			<div class="row d-flex justify-content-center">
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<div class="section-title text-center">
-						<h2 style="font-family: UEFA Supercup;">Our vision</h2>
-						<p style="font-family: UEFA Supercup;font-size: 18px;">We've launched the most credible news app on Google Play Store as our beta version. Check out the screenshots of the app.
+						<h2 style="font-family: UEFA Supercup;font-weight: bold;">Our vision</h2>
+						<p style="font-family: UEFA Supercup;font-size: 18px;">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
+As a first step, we’ve launched utfive- India’s Most credible News App which helps you understand different perspectives of important news stories.<br>
+Now, we are also building a technology solution based on a machine learning algorithm, which is backed by a strong community of renowned experts to help you eliminate fake news, misinformation, and biased news from your life.
+Our ‘Filtr’ platform is like a user empowerment medium that helps you analyze any content better by supercharging your knowledge around it so that you can easily filter out fake news, misinformation, and biased content from your life and build a clear and well-informed opinion about important topics. This 'Filtr' platform will be a part of the utfive app.
 						</p>
+						<h3 style="font-family: UEFA Supercup;font-weight: bold;">Important features of our ecosystem:</h3>
+						<p style="font-family: UEFA Supercup;font-size: 18px;">
+							1. <b style="color: black;">utfive App</b>: An app for common people integrated with our Filtr algorithm to get important news with multiple perspectives and to verify and analyze any news or information.<br></p><p style="font-family: UEFA Supercup;font-size: 18px;">
+2. <b style="color: black;">Filtr API</b>: A tool for businesses and organizations to analyze any content for its credibility, hatefulness, suspiciousness, and bias.<br></p><p style="font-family: UEFA Supercup;font-size: 18px;">
+3. <b style="color: black;">Expert community</b>: A community of experts actively involved in verifying the submissions made by users inside the app for fact-checking.</p>
+
 					</div>
 				</div>
 			</div>
-			<div class="row" data-aos = "zoom-out-down">
-				<div class="owl-carousel owl-screenshot">
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/1.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/2.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/3.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/4.png" alt="">
-					</div>
-
-
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/5.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/6.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/7.png" alt="">
-					</div>
-					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/8.png" alt="">
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</section>
 	
