--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 				</div>
 				<div class="banner-img col-lg-4 col-md-6" data-aos="slide-up">
-					<img class="img-fluid" src="img/srcs.png" style="margin-top: 25%;"alt="">
+					<img class="img-fluid" src="img/img/banner_img.png" style="margin-top: 25%;"alt="">
 				</div>
 			</div>
 		</div>
