--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 				</div>
 				<div class="banner-img col-lg-4 col-md-6" data-aos="slide-up">
-					<img class="img-fluid" src="img/img/banner_img.png" style="margin-top: 25%;"alt="">
+					<img class="img-fluid" src="img/ut_ss2.png" style="margin-top: 25%;"alt="">
 				</div>
 			</div>
 		</div>
@@ -269,7 +269,7 @@
 					<h1 style="font-family: UEFA Supercup;" class="animated bounce">
 						What is utfive
 					</h1>
-					<img class="img-fluid" src="img/srcs.png" data-aos="zoom-in" alt="" style="width: 80%;height: 60%;" data-aos="fade-up-right" >
+					<img class="img-fluid" src="img/ut_ss.png" data-aos="zoom-in" alt="" style="width: 80%;height: 60%;" data-aos="fade-up-right" >
 				</div>
 				<div class="offset-lg-1 col-lg-6 home-about-right">
 					<h1 style="font-family: UEFA Supercup;text-align: center;">
@@ -363,7 +363,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/user.png" style="width: 40%;height: 40%;">
+							<img src="img/icon/magnify.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Manually Curated and Verified News</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -388,7 +388,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/formats.png" style="width: 40%;height: 40%;">
+							<img src="img/icon/fake.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Dedicated Fake Check Section</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -399,7 +399,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/experts.png" style="width: 40%;height: 40%;">
+							<img src="img/icon/domain.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">News in Multiple Formats</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -410,7 +410,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/content.png" style="width: 40%;height: 40%;">
+							<img src="img/icon/user2.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">
 							Multiple Topics to Follow/Unfollow</h3>
 						</a>
@@ -485,8 +485,7 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2 style="font-family: UEFA Supercup;" data-aos = "zoom-out-right">Achievements</h2>
-						<p style="font-family: UEFA Supercup;" data-aos = "zoom-out-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua.
+						<p style="font-family: UEFA Supercup;" data-aos = "zoom-out-left">We are proud and thankful to have some significant achievements to count
 						</p>
 					</div>
 				</div>
@@ -854,7 +853,7 @@
 					</div>
 				</div>
 				<button class="foo2"  style="background-color: transparent;color: yellow;border:1px solid yellow;padding: 1px;border-radius: 10px;display:block;margin:0.4em auto;width: 55%;height: 50%;background-color: transparent;align-self: center;;margin:0.4em auto"><span><img src="img/ps.png" style="width: 20%;height: 20%;"></span>Download Utfive app</button>-->
-				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;width: 250px;height: 75px" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 20px;height: 20px;"><span style="font-size: 15px;">DOWNLOAD UTFIVE APP </span></button>
+				<button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;width: 250px;height: 75px;margin-left: 20px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 20px;height: 20px;"><span style="font-size: 15px;">DOWNLOAD UTFIVE APP </span></button>
 			</div><br>
 
 			<div class="footer-bottom row align-items-center">
