--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 				</div>
 				<div class="banner-img col-lg-4 col-md-6" data-aos="slide-up">
-					<img class="img-fluid" src="img/ut_ss2.png" style="margin-top: 25%;"alt="">
+					<img class="img-fluid" src="img/ut_ss2.png" style="margin-top: 25%;height: 100%;width: 100%"alt="">
 				</div>
 			</div>
 		</div>
