--- a/beta.html
+++ b/beta.html
@@ -98,7 +98,7 @@
 	
 
 
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	
 	<link rel="stylesheet" href="assets/css/ionicons.min.css">
 	<link rel="stylesheet" href="assets/css/owl.carousel.css">
 	<link rel="stylesheet" href="assets/css/owl.theme.css">
@@ -205,7 +205,7 @@
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h2 style="font-family: UEFA Supercup;font-weight: bold;">Our vision</h2>
-						<p style="font-family: UEFA Supercup;font-size: 18px;">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
+						<p id = "pop" class = "lo"style="font-family: UEFA Supercup;font-size: 18px;text-align: left;">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
 As a first step, we’ve launched utfive- India’s Most credible News App which helps you understand different perspectives of important news stories.<br>
 Now, we are also building a technology solution based on a machine learning algorithm, which is backed by a strong community of renowned experts to help you eliminate fake news, misinformation, and biased news from your life.
 Our ‘Filtr’ platform is like a user empowerment medium that helps you analyze any content better by supercharging your knowledge around it so that you can easily filter out fake news, misinformation, and biased content from your life and build a clear and well-informed opinion about important topics. This 'Filtr' platform will be a part of the utfive app.
@@ -217,8 +217,8 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
 					<div class="section-title text-center">
-						<h2 style="font-family: UEFA Supercup;" data-aos = "slide-up">Unique Features</h2>
-						<p style="font-family: UEFA Supercup;font-size: 18px;" data-aos = "slide-down"> utfive keeps you well-informed with the help of following features.
+						<h2 style="font-family: UEFA Supercup;" data-aos = "slide-up">Important features of our app are:</h2>
+						<p style="font-family: UEFA Supercup;font-size: 18px;" data-aos = "slide-down"> 
 						</p>
 					</div>
 				</div>
