--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 					<h1 style="font-family: UEFA Supercup;" class="animated bounce">
 						What is utfive
 					</h1>
-					<img class="img-fluid" src="img/ut_ss.png" data-aos="zoom-in" alt="" style="width: 80%;height: 60%;" data-aos="fade-up-right" >
+					<img class="img-fluid" src="img/ut_ss.png" data-aos="zoom-in" alt="" style="width: 100%;height: 100%;" data-aos="fade-up-right" >
 				</div>
 				<div class="offset-lg-1 col-lg-6 home-about-right">
 					<h1 style="font-family: UEFA Supercup;text-align: center;">
@@ -442,30 +442,30 @@
 			<div class="row" data-aos = "zoom-out-down">
 				<div class="owl-carousel owl-screenshot">
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/1.png" alt="">
+						<img class="img-fluid" src="ss2/a.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/2.png" alt="">
+						<img class="img-fluid" src="ss2/b.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/3.png" alt="">
+						<img class="img-fluid" src="ss2/c.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/4.png" alt="">
+						<img class="img-fluid" src="ss2/d.png" alt="">
 					</div>
 
 
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/5.png" alt="">
+						<img class="img-fluid" src="ss2/e.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/6.png" alt="">
+						<img class="img-fluid" src="ss2/f.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/7.png" alt="">
+						<img class="img-fluid" src="ss2/g.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss/8.png" alt="">
+						<img class="img-fluid" src="ss2/h.png" alt="">
 					</div>
 				</div>
 			</div>
