--- a/beta.html
+++ b/beta.html
@@ -217,7 +217,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
 					<div class="section-title text-center">
-						<h2 style="font-family: UEFA Supercup;" data-aos = "slide-up">Important features of our app are:</h2>
+						<h2 style="font-family: UEFA Supercup;" data-aos = "slide-up">Important features of our Ecosystem :</h2>
 						<p style="font-family: UEFA Supercup;font-size: 18px;" data-aos = "slide-down"> 
 						</p>
 					</div>
