--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 			<div class="row" data-aos = "zoom-out-down">
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
-						<img src="img/icon/icon1.png" style="width: 40%;height: 40%;">
+						<img src="features/sources.png" style="width: 40%;height: 40%;">
 						<a href="#" class="title">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Multiple Sources for Every News</h3>
 						</a>
@@ -363,7 +363,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/magnify.png" style="width: 40%;height: 40%;">
+							<img src="features/magnify.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Manually Curated and Verified News</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -374,7 +374,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/like.png" style="width: 40%;height: 40%;">
+							<img src="features/like.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Like and Share Any News You Like</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -388,7 +388,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/fake.png" style="width: 40%;height: 40%;">
+							<img src="features/fakenews.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">Dedicated Fake Check Section</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -399,7 +399,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/domain.png" style="width: 40%;height: 40%;">
+							<img src="features/formats.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">News in Multiple Formats</h3>
 						</a>
 						<p style="font-family: UEFA Supercup;font-size: 18px;color:#C0C0C0">
@@ -410,7 +410,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="img/icon/user2.png" style="width: 40%;height: 40%;">
+							<img src="features/categories.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: UEFA Supercup;color:grey;">
 							Multiple Topics to Follow/Unfollow</h3>
 						</a>
