--- a/index_team.html
+++ b/index_team.html
@@ -347,7 +347,7 @@
                   <ul>
                     <li><a href="https://m.facebook.com/sonamishra.001?ref=bookmarks"><i class="fa fa-facebook fa-2x"></i></a></li>
                     
-                    <li><a href="https://www.linkedin.com/mwlite/me"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sonali-mishra-77a0a9152/"><i class="fa fa-linkedin fa-2x"></i></a></li>
                   </ul>
                 </figcaption>
               </figure>
@@ -401,7 +401,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/satvik.jpg" >
+                <img src="img/sahil.jpeg" >
                 <figcaption>
                   <p>A B. Tech Student, 3rd Year, VIT Pune. Loves Machine Learning and solving real-world problems using programming skills.</p>
                   <ul>
@@ -438,7 +438,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/sahil.jpeg" >
+                <img src="img/satvik.jpg" >
                 <figcaption>
                   <p>A 3rd-year B.tech student. Always curious and fascinated by the idea of AI and ML. Loves reading and writing poetry, and believes that we all exist for the purpose of creating a better world.</p>
                   <ul>
