--- a/beta.html
+++ b/beta.html
@@ -297,7 +297,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
           </div>
         </div>
         <button class="foo2"  style="background-color: transparent;color: yellow;border:1px solid yellow;padding: 1px;border-radius: 10px;display:block;margin:0.4em auto;width: 55%;height: 50%;background-color: transparent;align-self: center;;margin:0.4em auto"><span><img src="img/ps.png" style="width: 20%;height: 20%;"></span>Download Utfive app</button>-->
-        <button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;width: 250px;height: 75px" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 20px;height: 20px;"><span style="font-size: 15px;">DOWNLOAD UTFIVE APP </span></button>
+        <button class="button" style="font-family:UEFA Supercup;background-color: white;color:black;border-color: black;width: 250px;height: 75px;margin-left: 20px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.utfive');"><img src="img/ps.png" style="width: 20px;height: 20px;"><span style="font-size: 15px;">DOWNLOAD UTFIVE APP </span></button>
       </div><br>
 
       <div class="footer-bottom row align-items-center">
