--- a/index_team.html
+++ b/index_team.html
@@ -352,7 +352,7 @@
                 </figcaption>
               </figure>
               <h4>Sonali Mishra</h4>
-              <p>Content Manager</p>
+              <p>Content Curator</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
           
