--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/logo.png">
+	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
 	<meta name="author" content="codepixer">
 	<!-- Meta Description -->
@@ -19,6 +19,10 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
 	<link rel="stylesheet" href="/animations.css" type="text/css">
+	
+	<link rel = "icon" href =  
+		"img/logo.png" 
+        type = "image/x-icon"> 
 	<!--
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">-->
@@ -61,7 +65,12 @@
 }	
 }
 
-
+@font-face {
+  font-family: 'MyFont';
+ 
+  src: url('UEFASupercup-Regular.ttf') /* Safari, Android, iOS */
+      
+}
 .button span {
   cursor: pointer;
   display: inline-block;
@@ -226,7 +235,7 @@
 		<div class="container" data-aos="fade-up">
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
-					<h2 style="display:block;margin:0.4em auto;font-family: UEFA Supercup;text-align: center;font-weight: bold;" data-aos="flip-down" class = "animated zoomInLeft">
+					<h2 style="display:block;margin:0.4em auto;font-family: 'MyFont';text-align: center;font-weight: bold;" data-aos="flip-down" class = "animated zoomInLeft">
 						utfive-<br> India's Most Credible News App
 					</h2>
 					<p style="text-align: center;font-family: UEFA Supercup;font-size: 18px;" data-aos="flip-left" class = "animated zoomIn">Keeps you well-informed about important news stories by letting you understand different perspectives around it.</p>
