--- a/beta.html
+++ b/beta.html
@@ -216,7 +216,7 @@
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h2 style="font-family: 'MyFont';font-weight: bold;">Our vision</h2>
-						<p id = "pop" class = "lo"style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #C0C0C0">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
+						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
 As a first step, we’ve launched utfive- India’s Most credible News App which helps you understand different perspectives of important news stories.<br>
 Now, we are also building a technology solution based on a machine learning algorithm, which is backed by a strong community of renowned experts to help you eliminate fake news, misinformation, and biased news from your life.
 Our ‘Filtr’ platform is like a user empowerment medium that helps you analyze any content better by supercharging your knowledge around it so that you can easily filter out fake news, misinformation, and biased content from your life and build a clear and well-informed opinion about important topics. This 'Filtr' platform will be a part of the utfive app.
@@ -241,7 +241,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 						<a href="#" class="title">
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px">Utfive app</h3>
 						</a>
-						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
+						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
 							An app for common people integrated with our Filtr algorithm to get important news with multiple perspectives and to verify and analyze any news or information
 						</p>
 					</div>
@@ -252,7 +252,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<img src="img/icon/api.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px">Filtr API</h3>
 						</a>
-						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
+						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
 							  A tool for businesses and organizations to analyze any content for its credibility, hatefulness, suspiciousness, and bias
 						</p>
 					</div>
@@ -263,7 +263,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<img src="img/icon/expert.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px;">Expert community</h3>
 						</a>
-						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
+						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
 							A community of experts actively involved in verifying the submissions made by users inside the app for fact-checking
 						</p>
 					</div>
