--- a/beta.html
+++ b/beta.html
@@ -170,7 +170,7 @@
 		<div class="container main-menu" style="background-color: white;">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html" style="text-decoration: none;font-family: 'MyFont';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
+					<a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
