--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<div class="row align-items-center justify-content-between d-flex">
 				
 				<div id="logo" class="animated bounce" >
-					<a href="index.html" style="text-decoration: none;font-family: 'MyFont';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
+					<a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
