--- a/team.html
+++ b/team.html
@@ -159,10 +159,13 @@
   <header id="headero" style="background-color: white;color: black;" >
     <div class="container main-menu" style="background-color: white;">
       <div class="row align-items-center justify-content-between d-flex">
-        <div id="logo">
-          <a href="index.html" style="text-decoration: none;font-family: UEFA Supercup;font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
-        </div>
-        <nav id="nav-menu-container">
+        <div id="logo" class="animated bounce" >
+          <a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-size: 23px;color:black;    
+letter-spacing:2px;
+font-weight:900;
+text-shadow: 1px 0 black;
+"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
+        </div><nav id="nav-menu-container">
           <ul class="nav-menu">
             <li id="nav_home">
               <a id = "lil1" href="index.html" style="font-family: UEFA Supercup;font-size: 18px;">Home</a>
