--- a/index_team.html
+++ b/index_team.html
@@ -170,8 +170,12 @@
   <header id="headero" style="background-color: white;color: black;" >
     <div class="container main-menu" style="background-color: white;">
       <div class="row align-items-center justify-content-between d-flex">
-        <div id="logo">
-          <a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-weight: bolder;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
+        <div id="logo" class="animated bounce" >
+          <a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-size: 23px;color:black;    
+letter-spacing:2px;
+font-weight:900;
+text-shadow: 1px 0 black;
+"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
