--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2 style="font-family: 'MyFont';">App Screenshots</h2>
-						<p style="font-family: 'MyFont';font-size: 18px;">We've launched the most credible news app on Google Play Store. Check out the screenshots of the app.
+						<p style="font-family: 'MyFont';font-size: 18px;"> We've launched India's Most Credible News App on Google Play Store
 						</p>
 					</div>
 				</div>
