--- a/index_team.html
+++ b/index_team.html
@@ -230,7 +230,7 @@ text-shadow: 1px 0 black;
       <div class="container">
 
        
-        <div class="row" data-aos = "zoom-in-right">
+        <div class="row">
 
           <div class="col-md-4">
             <div class="team-member">
@@ -290,7 +290,7 @@ text-shadow: 1px 0 black;
 
         </div><!-- /.row -->
 
-        <div class="row" data-aos = "zoom-in-left">
+        <div class="row" >
 
           <div class="col-md-4">
             <div class="team-member">
@@ -351,7 +351,7 @@ text-shadow: 1px 0 black;
 
         </div><!-- /.row -->
 
-        <div class="row" data-aos = "zoom-out-down">
+        <div class="row">
 
           <div class="col-md-4">
             <div class="team-member">
@@ -411,7 +411,7 @@ text-shadow: 1px 0 black;
 
         </div><!-- /.row -->
 
-        <div class="row" data-aos = "zoom-out-down">
+        <div class="row">
 
           <div class="col-md-4">
             <div class="team-member">
