--- a/index_team.html
+++ b/index_team.html
@@ -222,8 +222,8 @@ text-shadow: 1px 0 black;
 
     <div class="row text-center">
       <div class="col-md-12">
-        <h2 data-aos = "slide-down" style="font-family: 'MyFont';">Our Team</h2>
-        <h3 class="caption gray" data-aos = "zoom-in-up" style="font-family: 'MyFont';">We are a team of young passionate people</h3>
+        <h2 style="font-family: 'MyFont';">Our Team</h2>
+        <h3 class="caption gray" style="font-family: 'MyFont';">We are a team of young passionate people</h3>
       </div><!-- /.col-md-12 -->
       
         
