--- a/index_team.html
+++ b/index_team.html
@@ -159,7 +159,27 @@
       alert("a clicked");
     });*/
 </script>
+<style>
+  .container main-menu{
+    padding-left: -12px;
+  }
+  #headero{
+    margin-left: -30px;
+  }
+  .nav-menu{
+      margin-left: 215px
+  }
+  @media (max-width: 991px) {
+    #headero{
+      margin-left: 0px;
+    }
+    .nav-menu{
+      margin-left: 0px
+    }
+  }
+</style>
 </head>
+
 
 <body id="home">
   <!-- start header Area -->
@@ -167,7 +187,7 @@
   <script>
     AOS.init({duration: 1200});
   </script>
-  <header id="headero" style="background-color: white;color: black;" >
+  <header id="headero" style="background-color: white;" >
     <div class="container main-menu" style="background-color: white;">
       <div class="row align-items-center justify-content-between d-flex">
         <div id="logo" class="animated bounce" >
@@ -189,7 +209,7 @@ text-shadow: 1px 0 black;
               <ul>
                 <li><a href="elements.html">Elements</a></li>
               </ul> </li>-->
-            <li><a href="index_team.html" style="font-family: 'MyFont';font-size: 18px;">Team</a></li>
+            <li><a href="index_team.html" style="font-family: 'MyFont';font-size: 18px;color: red;font-weight: bold;">Team</a></li>
             </a></li>
             
             <li><a href="beta.html" style="font-family: 'MyFont';font-size: 18px;">Our Vision</a></li>
