--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 .style1{
     color:red;
 }
+#nav-menu-container{
+	
+}
+
 </style>
 <script>
 	$(document).ready(function() {
@@ -195,10 +199,10 @@
 			<div class="row align-items-center justify-content-between d-flex">
 				
 				<div id="logo" class="animated bounce" >
-					<a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
+					<a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-weight: bold;color: black;font-size: 23px;"><img src="img/logo.png" alt="" title="" style="width: 10%;height: 10%;" />utfive</a>
 				</div>
-				<nav id="nav-menu-container">
-					<ul class="nav-menu">
+				<nav id="nav-menu-container" style="padding: 0px;">
+					<ul class="nav-menu" >
 						<li id="nav_home">
 							<a id = "lil1" href="index.html" style="font-family: 'MyFont';font-size: 18px;">Home</a>
 						</li>
@@ -443,7 +447,7 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2 style="font-family: 'MyFont';">App Screenshots</h2>
-						<p style="font-family: 'MyFont';font-size: 18px;"> We've launched India's Most Credible News App on Google Play Store
+						<p style="font-family: 'MyFont';font-size: 18px;">We've launched the most credible news app on Google Play Store. Check out the screenshots of the app.
 						</p>
 					</div>
 				</div>
