--- a/index_team.html
+++ b/index_team.html
@@ -436,7 +436,7 @@ text-shadow: 1px 0 black;
           <div class="col-md-4">
             <div class="team-member">
               <figure>
-                <img src="img/sahil.jpeg" >
+                <img src="img/sahil.jpg" >
                 <figcaption>
                   <p>A B. Tech Student, 3rd Year, VIT Pune. Loves Machine Learning and solving real-world problems using programming skills.</p>
                   <ul>
