--- a/beta.html
+++ b/beta.html
@@ -94,6 +94,15 @@
   opacity: 1;
   right: 0;
 }
+@media (max-width: 1200px) and (min-width: 948px){
+  #mobile-nav-toggle {
+    display: inline; }
+  #logo{
+    margin-left: 22px;
+  }
+
+  #nav-menu-container {
+    display: none; } }
 </style>
 
 
@@ -105,7 +114,7 @@
 	<link rel="stylesheet" href="css/nice-select.css">
 	<link rel="stylesheet" href="css/hexagons.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main2.css">
 	
 
 
@@ -216,10 +225,22 @@
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h2 style="font-family: 'MyFont';font-weight: bold;">Our vision</h2>
-						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">We are building an app-based ecosystem to empower common people against fake news, misinformation, and biased content so that they can think critically and can make well-informed decisions about important topics.
-As a first step, we’ve launched utfive- India’s Most credible News App which helps you understand different perspectives of important news stories.<br>
+						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">It’s very common to see that today, people rarely question any information for its credibility before consuming it. We want to change the way people consume information.
+By saying that, we mean to say that we want them not to trust any information blindly. Instead, we want them to take some time, use their senses, analyze it properly and then only consume it.
+<br>
 Now, we are also building a technology solution based on a machine learning algorithm, which is backed by a strong community of renowned experts to help you eliminate fake news, misinformation, and biased news from your life.
 Our ‘Filtr’ platform is like a user empowerment medium that helps you analyze any content better by supercharging your knowledge around it so that you can easily filter out fake news, misinformation, and biased content from your life and build a clear and well-informed opinion about important topics. This 'Filtr' platform will be a part of the utfive app.
+						</p></div></div></div></div></section>
+
+
+
+<section class="screenshot-area section-gap-top">
+		<div class="container" id="features" data-aos = "slide-up">
+			<div class="row d-flex justify-content-center">
+				<div class="col-lg-12">
+					<div class="section-title text-center">
+						<h2 style="font-family: 'MyFont';font-weight: bold;">Our Mission</h2>
+						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">At Utfive, our mission is to educate and empower people to fight against fake news, misinformation, and biased news using technology
 						</p></div></div></div></div></section>
 
 						<div id="features">
@@ -228,8 +249,9 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
 					<div class="section-title text-center">
-						<h2 style="font-family: 'MyFont';" data-aos = "slide-up">Important features of our Ecosystem :</h2>
+						<h2 style="font-family: 'MyFont';" data-aos = "slide-up">Important features of our Ecosystem </h2>
 						<p style="font-family: 'MyFont';font-size: 18px;" data-aos = "slide-down"> 
+
 						</p>
 					</div>
 				</div>
@@ -242,7 +264,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px">Utfive app</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
-							An app for common people integrated with our Filtr algorithm to get important news with multiple perspectives and to verify and analyze any news or information
+							Utfive app- An app for people to get important news supported with multiple reliable sources and to verify any fake news in three simple steps.
 						</p>
 					</div>
 				</div>
@@ -253,7 +275,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px">Filtr API</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
-							  A tool for businesses and organizations to analyze any content for its credibility, hatefulness, suspiciousness, and bias
+							  A tool for businesses and organizations to analyze any content for its credibility, hatefulness, suspiciousness, and bias.
 						</p>
 					</div>
 				</div>
@@ -264,7 +286,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px;">Expert community</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
-							A community of experts actively involved in verifying the submissions made by users inside the app for fact-checking
+							 A community of experts actively involved in fake-checking the submissions made by users inside the app
 						</p>
 					</div>
 				</div>
