--- a/index_team.html
+++ b/index_team.html
@@ -506,8 +506,8 @@ text-shadow: 1px 0 black;
                   </ul>
                 </figcaption>
               </figure>
-              <h4>Satvik Dandale</h4>
-              <p>Machine Learning Developer</p>
+              <h4 style="display: none;">Satvik Dandale</h4>
+              <p style="display: none;">Machine Learning Developer</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
           
