--- a/index_team.html
+++ b/index_team.html
@@ -519,7 +519,7 @@ text-shadow: 1px 0 black;
                 <figcaption>
                   <p>B.Tech (CSE) 3rd year, MIT Moradabad. I am a passionate and hardworking person who loves to learn new things. My passion is programming. Android and Python are my top skills. Java and C made me dive into the amusing world of code..</p>
                   <ul>
-                    <li><a href="https://m.facebook.com/ujjwal.verma.12"><i class="fa fa-facebook fa-2x"></i></a></li>
+                    <li><a href="https://m.facebook.com/profile.php?id=100011753509603"><i class="fa fa-facebook fa-2x"></i></a></li>
                     
                     <li><a href="https://www.linkedin.com/in/sonali-saxena-700b7515a"><i class="fa fa-linkedin fa-2x"></i></a></li>
                   </ul>
