--- a/beta.html
+++ b/beta.html
@@ -227,9 +227,7 @@
 						<h2 style="font-family: 'MyFont';font-weight: bold;">Our vision</h2>
 						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">It’s very common to see that today, people rarely question any information for its credibility before consuming it. We want to change the way people consume information.
 By saying that, we mean to say that we want them not to trust any information blindly. Instead, we want them to take some time, use their senses, analyze it properly and then only consume it.
-<br>
-Now, we are also building a technology solution based on a machine learning algorithm, which is backed by a strong community of renowned experts to help you eliminate fake news, misinformation, and biased news from your life.
-Our ‘Filtr’ platform is like a user empowerment medium that helps you analyze any content better by supercharging your knowledge around it so that you can easily filter out fake news, misinformation, and biased content from your life and build a clear and well-informed opinion about important topics. This 'Filtr' platform will be a part of the utfive app.
+
 						</p></div></div></div></div></section>
 
 
@@ -264,7 +262,7 @@ Our ‘Filtr’ platform is like a user empowerment medium that helps you analyz
 							<h3 style="font-family: 'MyFont';color:rgba(0,0,0,0.7);padding:9px">Utfive app</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#808080">
-							Utfive app- An app for people to get important news supported with multiple reliable sources and to verify any fake news in three simple steps.
+							An app for people to get important news supported with multiple reliable sources and to verify any fake news in three simple steps.
 						</p>
 					</div>
 				</div>
